# ai-agent-test

./: .env  01-ollama.py  02-openai-api.py  03-1-semantic-search-indexing.py  03-2-semantic-search-indexing  03-3-semantic-search-indexing.py  1.txt  6-pypdf.txt  README  langchain-2.txt  langchain-chromadb-5.txt  langchain-community-3.txt  langchain-deepseek-4.txt  main.py  pyproject.toml  wsl网络连接测试.py  语义搜索.md
